# Axon

./: .gitignore  BENCHMARKS.md  Cargo.toml  FEATURES.md  PAPERCUTS.md  PLAN.md  package.json  pnpm-lock.yaml
.claude/: settings.json
crates/axon-a2a/: Cargo.toml
crates/axon-a2a/src/: auto_publish.rs  errors.rs  identity.rs  lib.rs
crates/axon-ast/: Cargo.toml
crates/axon-ast/src/: lib.rs
crates/axon-async/: Cargo.toml
crates/axon-async/src/: lib.rs
crates/axon-cli/: Cargo.toml
crates/axon-cli/src/: host.rs  main.rs  qol.rs  scaffold.rs  watch_format.rs  why.rs
crates/axon-cli/tests/: axon_optimize.rs  axon_pkg.rs  dogfood_benchmarks.rs  host_attrs.rs  host_auth.rs  host_concurrency.rs  host_deploy.rs  host_dlib_and_delegation.rs  host_durable.rs  host_feedback.rs  host_flow.rs  host_isolation.rs  host_memory.rs  host_migrate.rs  host_observability.rs  host_rag_media.rs  host_security.rs  host_supervisor.rs  stage24_orchestration.rs  stage24_reasoning_eval.rs  stage25_end_to_end.rs  stage26_minor_gaps.rs  stage27_final_gaps.rs  stage28_orchestration_safety.rs  stage29_long_tail.rs  stage30_devex.rs  stage31_depth.rs  stage32_async.rs  stage32_fix.rs  stage32_replay.rs  stage33_fixes_and_lens.rs  stage34_confidence_tiers.rs  stage34_interactive_watch.rs  stage34_verify_fixes.rs  stage34_why_and_lens.rs  stage35_agent_slots.rs  stage35_doc_tests.rs  stage35_project_interactive.rs  stage35_trajectory.rs  stage35_verify_fixes.rs  (+8 more)
crates/axon-computer/: Cargo.toml
crates/axon-computer/src/: lib.rs
crates/axon-cost/: Cargo.toml
crates/axon-cost/src/: cache.rs  entry.rs  ledger.rs  lib.rs  profile.rs  report.rs
crates/axon-deploy/: Cargo.toml
crates/axon-deploy/src/: dotenv.rs  health.rs  http.rs  lib.rs  manifest.rs  metrics.rs  protocols.rs  serverless.rs
crates/axon-diag/: Cargo.toml
crates/axon-diag/src/: explain.rs  lib.rs
crates/axon-doc/: Cargo.toml
crates/axon-doc/src/: doctest.rs  lib.rs
crates/axon-doc/tests/: doc.rs
crates/axon-eval/: Cargo.toml
crates/axon-eval/src/: lib.rs  metric.rs  redteam.rs  report.rs  scenario.rs  sim.rs  suite.rs  trajectory.rs
crates/axon-ffi/: Cargo.toml
crates/axon-ffi/src/: bridges.rs  dlib.rs  errors.rs  lib.rs
crates/axon-flow/: Cargo.toml
crates/axon-flow/src/: consensus.rs  debate.rs  error.rs  graph.rs  lib.rs  network.rs  parallel.rs  race.rs  refine.rs  route.rs  saga.rs  scripted.rs  sequential.rs  strategy.rs  tot.rs
crates/axon-fmt/: Cargo.toml
crates/axon-fmt/src/: lib.rs
crates/axon-fmt/tests/: fmt.rs
crates/axon-guard/: Cargo.toml
crates/axon-guard/src/: approval.rs  filter.rs  human.rs  injection.rs  lib.rs  policy.rs  policy_block.rs
crates/axon-lexer/: Cargo.toml
crates/axon-lexer/src/: lexer.rs  lib.rs  token.rs
crates/axon-lexer/tests/: lexer.rs
crates/axon-lsp/: Cargo.toml
crates/axon-lsp/src/: analyze.rs  code_actions.rs  cost_lens.rs  effect_lens.rs  lib.rs  position.rs  query.rs  server.rs
crates/axon-lsp/tests/: lsp.rs
crates/axon-media/: Cargo.toml
crates/axon-media/src/: audio.rs  document.rs  errors.rs  generate.rs  image.rs  lib.rs  sniff.rs
crates/axon-memory/: Cargo.toml
crates/axon-memory/src/: errors.rs  lib.rs
crates/axon-memory/tests/: memory.rs
crates/axon-models/: Cargo.toml
crates/axon-models/src/: anthropic.rs  lib.rs  mock.rs  schema.rs
crates/axon-parser/: Cargo.toml
crates/axon-parser/src/: lib.rs  parser.rs
crates/axon-project/: Cargo.toml
crates/axon-project/src/: features.rs  lib.rs  mcp.rs
crates/axon-project/tests/: privacy_and_deps.rs  project.rs
crates/axon-rag/: Cargo.toml
crates/axon-rag/src/: bm25.rs  chunk.rs  embed.rs  grounding.rs  index.rs  lib.rs  retrieve.rs
crates/axon-runtime/: Cargo.toml
crates/axon-runtime/src/: actor.rs  async_rt.rs  attrs.rs  budget.rs  builtin.rs  caps.rs  context_policy.rs  env.rs  error.rs  eval.rs  lib.rs  migrate.rs  otlp.rs  parallel.rs  prompt_version.rs  reasoning.rs  record.rs  restart_policy.rs  stream.rs  supervisor.rs  tool.rs  trace.rs  value.rs
crates/axon-runtime/tests/: actors.rs  capabilities.rs  models.rs  observability.rs  runtime.rs  stage36_scope_invariants.rs  tools.rs
crates/axon-sandbox/: Cargo.toml
crates/axon-sandbox/src/: errors.rs  lib.rs  platform.rs
crates/axon-secret/: Cargo.toml
crates/axon-secret/src/: lib.rs  (+3 more)
crates/axon-skill/: Cargo.toml
crates/axon-std/: Cargo.toml
crates/axon-std/src/: lib.rs  list.rs  map.rs  math.rs  option.rs  result.rs  set.rs  string.rs  time.rs
crates/axon-std/tests/: integration.rs  std.rs
crates/axon-trigger/: Cargo.toml
crates/axon-trigger/src/: cron.rs  durable_timer.rs  lib.rs  schedule.rs  scheduler.rs  trigger.rs
crates/axon-tyck/: Cargo.toml
crates/axon-tyck/src/: builtins.rs  ctx.rs  errors.rs  gbnf.rs  infer.rs  lib.rs  lower.rs  register.rs
crates/axon-tyck/tests/: tyck.rs
crates/axon-types/: Cargo.toml
crates/axon-vm/: Cargo.toml
crates/axon-vm-cabi/: Cargo.toml
crates/axon-vm-cabi/include/: axvm.h
crates/axon-vm-cabi/src/: lib.rs
crates/axon-vm/src/: compiler.rs  disasm.rs  lib.rs  ops.rs  value.rs  vm.rs
crates/axon-vm/tests/: vm.rs
crates/axon-wasm/: Cargo.toml
crates/axon-wasm/src/: lib.rs  lower.rs  subset.rs
crates/axon-wasm/tests/: wasm.rs
examples/: fib.ax  hello.ax  pure.ax  researcher.ax  stage23_dlib_and_delegation.ax  stage24_orchestration_and_eval.ax  stage25_completeness.ax  stage26_features_mcp_helpers.ax  stage27_final_gaps.ax  stage28_panel_policy_protocols.ax  stage29_long_tail.ax  stage30_native_syntax.ax  stage31_depth.ax  stage32_async_and_fix.ax  stage32_typos.ax  stage35_agent_slots.ax
examples/calculator/: axon.toml
examples/dogfood_triage/: axon.toml
spec/: grammar.ebnf
web/: next.config.mjs  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/components/: Breadcrumbs.tsx  ChapterView.tsx  CodeBlock.tsx  DocsPageShell.tsx  DocsSidebar.tsx  Footer.tsx  Header.tsx  PreEnhancer.tsx  PrevNext.tsx  TableOfContents.tsx
web/lib/: docs.ts  highlight.ts  sections.ts  sidebar.ts
(+28 files in other folders)
