[package]
name = "axon-a2a"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Axon agent-to-agent interop: agent-card.json, discovery, signed identity."

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
ureq       = { workspace = true }
