[package]
name = "axon-deploy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Axon deploy tooling: HTTP server, health checks, env binding, deploy manifest."

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
axon-skill = { workspace = true }
