[package]
name = "axon-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Axon foreign function interface — subprocess FFI + dynamic-library loading."

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
libloading = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
