[package]
name = "axon-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Axon sandbox — resource limits and subprocess sandboxing via Unix rlimit."

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Linux-only: seccomp-bpf syscall filtering. `seccompiler` is the
# upstream-maintained pure-Rust crate (used by Firecracker).
[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = "0.5"
