[package]
name = "axon-std"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Axon standard library — core data and math operations registered as native functions."

[dependencies]
axon-runtime = { workspace = true }

[dev-dependencies]
axon-runtime = { workspace = true }
axon-diag = { workspace = true }
axon-parser = { workspace = true }
