[package]
name = "axon-trigger"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Axon triggers & durable scheduling: Schedule, Trigger, in-process Scheduler with persistent state."

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
axon-memory = { workspace = true }
